# Quartz

./: .gitignore  .gitmodules  CMakeLists.txt
data/shaders/: compile.bat  compile.sh  shader.frag  shader.vert
src/: main.cpp
src/qz/gfx/: assets.cpp  assets.hpp  buffer.cpp  buffer.hpp  clear.hpp  command_buffer.cpp  command_buffer.hpp  context.cpp  context.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  static_mesh.cpp  static_mesh.hpp  swapchain.cpp  swapchain.hpp  vma.cpp  window.cpp  window.hpp
src/qz/meta/: constants.hpp  types.hpp
src/qz/task/: scheduler.cpp  scheduler.hpp
src/qz/util/: fwd.hpp  macros.hpp
